# PWR

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  aclocal.m4  bootstrap  config.h  config.h.in  config.h.in~  config.status  configure  configure.ac  configure.scan  libtool
config/: Makefile  Makefile.in
doc/Design/: Passive Weather Radar Theory fig-01.odg  Passive Weather Radar Theory fig-02.odg  Passive Weather Radar Theory fig-03.odg  Passive Weather Radar Theory fig-04.odg  Passive Weather Radar Theory fig-05.odg  Passive Weather Radar Theory fig-06.odg  Passive Weather Radar Theory fig-07.odg  Passive Weather Radar Theory.tex  Passive Weather Radar Theory.toc  Passive Weather Radar Theory.xml  Passive Weather Radar.bib  Passive Weather Radar.reflib  Passive-Weather-Radar-Theory-fig-08.eps  Passive-Weather-Radar-Theory-fig-09.eps  Passive-Weather-Radar-Theory-fig-11.eps  Passive-Weather-Radar-Theory-fig-12.eps
doc/Geographic/: Postcodes  Transmitters.html
doc/Invoices/: mail
doc/Invoices/Scan/: 2011-07-05-Minibox.p001.tiff
doc/Literature/: 25201-900.doc  25212-940.doc  25214-940.doc  25215-920.doc
doc/Notes/: Gain.html
src/: Makefile  Makefile.am  Makefile.in
src/lib/: Makefile  Makefile.am  Makefile.in  c_psc_fft.h  gr_correlate_psc_cc.cc  gr_correlate_psc_cc.i  gr_correlate_psc_cc.loT
src/lib/.deps/: gr_correlate_psc_cc.Tpo
test/: usrp-wind-profiler-1.0.tar.bz2
test/algorithm/: S.mat  Z.mat  c_psc.mat  c_psc_fft.mat  find-pp-sch.m  p-sch-correlate.m  real-display.py  scambler_generation.m  seed_scrambler.m  x.mat  x_psc.mat  y.mat
test/qt/: grapical-sink.grc  gui.py  real-signal.py  top_block.py
test/simulate/design/: Passive-Weather-Radar-Theory-fig-08.eps  Passive-Weather-Radar-Theory-fig-09.eps  amb.m  ambiguity.m  ambiguityILL.m  ambiguity_function.m  ambiguity_function_generator.m  autocorrelate-raw-data.m  bw_limited_m_sequence_benerator.m  chopped_m_sequence_generator.m  cmplxambiguity.m  coordAxes.m  cross_correlated.m  license.txt  m_sequence_generator.m  match.m  matched.m  matched_filter.m  scope_test.grc  top_block.py  v_test.m  white-Gaussian-noise-properties.m  xcorril.m
test/simulate/design/FM/: FM_data_generator.grc
test/simulate/design/M-Sequence/Generator/: M_Sequence_data_generator.grc  top_block.py
test/simulate/design/M-Sequence/Receiver/: Receiver.grc  Scrambler.grc  Scrambler.py  top_block.py
