dnl                                               -*- Autoconf -*-
dnl Process this file with autoconf to produce a configure script.

AC_INIT([gr-howto-write-a-block],[3.3svn])
AC_PREREQ(2.57)
AC_CONFIG_AUX_DIR([.])

m4_include([config/gr_standalone.m4])
GR_STANDALONE

AC_CONFIG_FILES([src/Makefile \
                 src/lib/Makefile \
                 Makefile])
AC_OUTPUT

